testcases/semantic/valid/array.rs
fn main() {
    let _: [u32; 1] = [0; 1]; // Inferred const.
}
