testcases/semantic/invalid/array.rs
fn main() {
    const C: usize = 1;
    let _: [u32; xx] = [0; _];
}
